--- a/index.html
+++ b/index.html
@@ -600,11 +600,23 @@ const tdFolder=document.createElement('td'); tdFolder.textContent=folderName;
 
     const tdAction=document.createElement('td'); tdAction.className='action-cell';
     let html='';
-    if(f.name.toLowerCase().endsWith('.csv')){
-      html+=`<a href="https://drive.google.com/uc?export=download&id=${f.id}" target="_blank"><button class="action-btn">Télécharger</button></a>`;
-      html+=`<button class="action-btn" onclick="openViewer('viewer.html','${f.id}','${f.name}')">Tableau</button>`;
-      html+=`<button class="action-btn" onclick="openViewer('viewer02.html','${f.id}','${f.name}')">Courbes</button>`;
-    }
+if(f.name.toLowerCase().endsWith('.csv')){
+  html+=`<a href="https://drive.google.com/uc?export=download&id=${f.id}" target="_blank"><button class="action-btn">Télécharger</button></a>`;
+  html+=`<button class="action-btn" onclick="openViewer('viewer.html','${f.id}','${f.name}')">Tableau</button>`;
+
+  // 👇 bouton Courbes seulement si on n'est PAS dans Historique
+  if (!folderName.toLowerCase().includes("historique")) {
+    html+=`<button class="action-btn" onclick="openViewer('viewer02.html','${f.id}','${f.name}')">Courbes</button>`;
+  }
+
+  // 👇 bouton Sondes uniquement si on est dans Traça_Temp
+  if (folderName.toLowerCase().includes("traça_temp") || folderName.toLowerCase().includes("traca_temp")) {
+    html+=`<button class="action-btn" onclick="openViewer('index03.html','${f.id}','${f.name}')">Sondes</button>`;
+  }
+}
+
+
+
     if(/\.(jpg|jpeg)$/i.test(f.name)){
       html+=`<img src="https://drive.google.com/thumbnail?id=${f.id}" onclick="openModal('${f.id}')" alt="aperçu">`;
       html+=`<a href="https://drive.google.com/uc?export=download&id=${f.id}" target="_blank"><button class="action-btn">Télécharger</button></a>`;
@@ -630,36 +642,24 @@ async function openViewer(viewer, id, name){
   // 🔗 Récupérer les Z3 préchargés
   const z3Files = JSON.parse(localStorage.getItem("csvZ3Files") || "[]");
 
-  // SA + Z3 → base
   const allCsv = [...saFiles, ...z3Files];
 
   // ⚡ Ajouter la hiérarchie de dossiers
   function addFolderHierarchy(li, acc){
     if (!li) return;
-
     const nameSpan = li.querySelector('.folder-name');
-    const folderObj = {
-      id: li.dataset.id,
-      name: nameSpan ? nameSpan.textContent : '',
-      parents: []
-    };
-
+    const folderObj = { id: li.dataset.id, name: nameSpan ? nameSpan.textContent : '', parents: [] };
     const parentLi = li.parentElement.closest('li');
     if (parentLi) {
       folderObj.parents.push(parentLi.dataset.id);
       addFolderHierarchy(parentLi, acc);
     }
-
     if (!acc.find(x => x.id === folderObj.id)) {
       acc.push(folderObj);
     }
   }
-
-  // 👉 Dossier actif
   const activeLi = active.closest('li');
   addFolderHierarchy(activeLi, allCsv);
-
-  // 👉 Relier chaque CSV au dossier actif
   allCsv.forEach(f => {
     if (!f.parents) f.parents = [];
     if (!f.parents.includes(activeLi.dataset.id)) {
@@ -667,16 +667,41 @@ async function openViewer(viewer, id, name){
     }
   });
 
-  // Sauvegarde
   localStorage.setItem("csvFilesList", JSON.stringify(allCsv));
-
   const index = allCsv.findIndex(f => f.id === id);
   localStorage.setItem("csvFileIndex", index);
 
   console.log("📦 Sauvegardé dans csvFilesList:", allCsv); // debug
 
-  window.open(`${viewer}?fileId=${id}&fileName=${encodeURIComponent(name)}`,'_blank');
+// 🔍 Vérifier si un plan_sondes.csv existe dans ce dossier
+const planFile = files.find(f => f.name.toLowerCase() === "plan_sondes.csv");
+let url = `${viewer}?fileId=${id}&fileName=${encodeURIComponent(name)}`;
+
+if (planFile) {
+  console.log("✅ plan_sondes.csv trouvé :", planFile);
+
+  try {
+    // Charger et stocker le plan dans localStorage
+    const urlPlan = `https://www.googleapis.com/drive/v3/files/${planFile.id}?alt=media&key=${API_KEY}`;
+    const respPlan = await fetch(urlPlan);
+    const textPlan = await respPlan.text();
+    localStorage.setItem("planSondes", textPlan);
+    console.log("📦 plan_sondes.csv stocké dans localStorage");
+  } catch (e) {
+    console.error("❌ Erreur lors du chargement du plan_sondes.csv", e);
+  }
+} else {
+  console.warn("⚠️ Aucun plan_sondes.csv trouvé dans ce dossier");
+  localStorage.removeItem("planSondes"); // nettoyage si pas de plan
 }
+
+
+  console.log("➡️ URL générée :", url);
+
+  window.open(url,'_blank');
+}
+
+
 
 
 
@@ -931,14 +956,30 @@ async function checkTraçaTempToday(parentLi, tracatempId) {
     if (!lastLine) return;
 
     // Nettoyage : enlever guillemets et espaces
+    const headers = lines[0].split(",").map(h => h.replace(/"/g, "").trim());
     const cols = lastLine.split(",").map(c => c.replace(/"/g, "").trim());
 
-    const v4 = parseFloat(cols[3]);
-    const v6 = parseFloat(cols[5]);
+    // Trouver la 2ème occurrence de "Sonde AC Sup"
+    let supIndices = headers
+      .map((h, i) => ({ h, i }))
+      .filter(o => o.h.toLowerCase().includes("sonde ac sup"));
+    let idxSup = supIndices.length >= 2 ? supIndices[1].i : supIndices[0]?.i;
 
-    if ((v4 && v4 > FLAME_THRESHOLD) || (v6 && v6 > FLAME_THRESHOLD)) {
+    // Trouver la 2ème occurrence de "Sonde AC Inf"
+    let infIndices = headers
+      .map((h, i) => ({ h, i }))
+      .filter(o => o.h.toLowerCase().includes("sonde ac inf"));
+    let idxInf = infIndices.length >= 2 ? infIndices[1].i : infIndices[0]?.i;
+
+    // Valeurs
+    const vSup = idxSup !== undefined ? parseFloat(cols[idxSup]) : NaN;
+    const vInf = idxInf !== undefined ? parseFloat(cols[idxInf]) : NaN;
+
+    // 🔥 seuil
+    if ((vSup && vSup > FLAME_THRESHOLD) || (vInf && vInf > FLAME_THRESHOLD)) {
       markFolderWithFlame(parentLi);
     }
+
 
   } catch (e) {
     console.error("Erreur lecture CSV dans Temp", e);
